# voxtap

./: LICENSE  README.md  pyproject.toml
.claude/skills/git-pr/: SKILL.md
docs/: keybindings.md
src/voxtap/: __init__.py  __main__.py  app.py  clipboard.py  toggle.py
