[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxtap"
version = "0.1.0"
description = "Tap a key, get voice transcribed. Speech-to-text with Whisper."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Lukas Kellerstein" },
]
keywords = ["speech-to-text", "whisper", "transcription", "voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/lukaskellerstein/voxtap"
Issues = "https://github.com/lukaskellerstein/voxtap/issues"

[project.scripts]
voxtap = "voxtap.app:main"
voxtap-toggle = "voxtap.toggle:main"
